@@ -1,5 +1,9 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2005-03-21 patrickh    org.vrjuggler.tweek.beans.loader.BeanInstatiationException
+                       now supports the Java 1.4 "cause" mechanism for
+                       chaining exceptions.
+                       NEW VERSION 0.92.6
 2005-03-06 patrickh    Removed the Tweek WizardBuilder Bean from the mix.
                        NEW VERSION 0.92.5
 2005-02-11 patrickh    Added the capability for Beans to notify the Tweek Java
